kubernetes-monitoring/webmon-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webmon
  labels:
    app: webmon
spec:
  selector:
    app: webmon
  #type: ClusterIP
  type: LoadBalancer
  ports:
    - name: http-web
      protocol: TCP
      port: 80
      targetPort: 80
    - name: http-exporter
      protocol: TCP
      port: 9113
      targetPort: 9113
