kubernetes-monitoring/webmon-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    ingress.alb.yc.io/external-ipv4-address: 51.250.72.249
spec:
  ingressClassName: nginx
  type: LoadBalancer
  rules:
    - host: webmon.local
      http:
        paths:
          - path: /web(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                 name: webmon
                 port:
                   number: 80
          - path: /prom(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                #name: prometheus-operated
                name: prometheus-operator
                port:
                  number: 9090
                  #number: 8080
